// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ViewSharingButton/> render() should render as disabled because this is a system view 1`] = `
<Fragment>
  <ForwardRef
    id="view-sharing-button"
    intent="secondary"
    isDisabled={true}
    onClick={[Function]}
  >
    <ButtonIconLabel
      className="label"
      icon="person_add"
    >
      Sharing: 
      <b>
        Public
      </b>
    </ButtonIconLabel>
  </ForwardRef>
  <ViewSharingButtonTooltip
    isAllowed={true}
    isSystem={true}
  />
</Fragment>
`;

exports[`<ViewSharingButton/> render() should render as disabled because user is not allowed 1`] = `
<Fragment>
  <ForwardRef
    id="view-sharing-button"
    intent="secondary"
    isDisabled={true}
    onClick={[Function]}
  >
    <ButtonIconLabel
      className="label"
      icon="person_add"
    >
      Sharing: 
      <b>
        Public
      </b>
    </ButtonIconLabel>
  </ForwardRef>
  <ViewSharingButtonTooltip
    isAllowed={false}
    isSystem={false}
  />
</Fragment>
`;

exports[`<ViewSharingButton/> render() should render as private 1`] = `
<Fragment>
  <ForwardRef
    id="view-sharing-button"
    intent="secondary"
    isDisabled={false}
    onClick={[Function]}
  >
    <ButtonIconLabel
      className="label"
      icon="person_add"
    >
      Sharing: 
      <b>
        Private
      </b>
    </ButtonIconLabel>
  </ForwardRef>
  <ViewSharingButtonTooltip
    isAllowed={true}
    isSystem={false}
  />
</Fragment>
`;

exports[`<ViewSharingButton/> render() should render as public 1`] = `
<Fragment>
  <ForwardRef
    id="view-sharing-button"
    intent="secondary"
    isDisabled={false}
    onClick={[Function]}
  >
    <ButtonIconLabel
      className="label"
      icon="person_add"
    >
      Sharing: 
      <b>
        Public
      </b>
    </ButtonIconLabel>
  </ForwardRef>
  <ViewSharingButtonTooltip
    isAllowed={true}
    isSystem={false}
  />
</Fragment>
`;

exports[`<ViewSharingButton/> render() should render as shared 1`] = `
<Fragment>
  <ForwardRef
    id="view-sharing-button"
    intent="secondary"
    isDisabled={false}
    onClick={[Function]}
  >
    <ButtonIconLabel
      className="label"
      icon="person_add"
    >
      Sharing: 
      <b>
        Shared
      </b>
    </ButtonIconLabel>
  </ForwardRef>
  <ViewSharingButtonTooltip
    isAllowed={true}
    isSystem={false}
  />
</Fragment>
`;
